--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<ul class="list-unstyled">
 					<li><strong class="font-weight-700">Creato:</strong> 10 aprile 2025</li>
-					<li><strong>Ultima modifica:</strong> 15 aprile 2025</li>
+					<li><strong>Ultima modifica:</strong> 16 aprile 2025</li>
 				</ul>
 			</div>
 		</div>
@@ -130,7 +130,7 @@
                       └── Fine partita → ritorno alla stanza
       </pre>
       <p>
-        <img src="https://i.postimg.cc/QCy7Qz8n/unnamed.png"/>
+        <img src="https://i.ibb.co/7J040Jw4/Screenshot-2025-04-16-220115.png"/>
       </p>
       Dopo aver effettuato il login, l’utente viene indirizzato alla lobby principale, che rappresenta il punto di accesso alle 
       funzionalità di gioco. Da qui, può scegliere se creare una nuova stanza oppure unirsi a una stanza esistente. Nel caso in cui 
