aggiunta bottoni call e puntata libera

--- a/public/home.html
+++ b/public/home.html
@@ -46,9 +46,11 @@
             <div id="carte_mano"></div>
             <div class="action-buttons">
                 <button class="btn btn-danger action-button" id="fold">Fold</button>
-                <button class="btn btn-warning action-button" id="check">Check</button>
+                <button class="btn btn-secondary action-button" id="check">Check</button>
+                <button class="btn btn-warning action-button" id="call">Call</button>
                 <button class="btn btn-success action-button" id="raise">Raise</button>
-            </div>
+                <input type="number" class="form-control form-control-sm d-inline-block w-auto ms-2" placeholder="2">
+                </div>
         </div>       
     </div>
     <script type="module" src="script.js"></script>
