--- a/public/home.html
+++ b/public/home.html
@@ -49,7 +49,7 @@
                 <button class="btn btn-secondary action-button" id="check">Check</button>
                 <button class="btn btn-warning action-button" id="call">Call</button>
                 <button class="btn btn-success action-button" id="raise">Raise</button>
-                <input type="number" class="form-control form-control-sm d-inline-block w-auto ms-2" placeholder="2">
+                <input type="number" class="form-control form-control-sm d-inline-block w-auto ms-2" placeholder="2" id="puntata_libera">
                 </div>
         </div>       
     </div>
