documentazione con link gioco

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <p class="lead">Per ora non sono presenti credenziali</p>
             <section id="link">
             <h2>Link al progetto</h2>
-            <a href="">Link al progetto</a>
+            <a href="public/home.html">Link al progetto</a>
             <br>
             <a href="https://www.canva.com/design/DAGkT3yZ4M8/pCq8GZ4KZEh8cek7jLDVyg/edit?utm_content=DAGkT3yZ4M8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Link al powerpoint</a>
         </section>
