--- a/public/home.html
+++ b/public/home.html
@@ -54,6 +54,7 @@
         </div>       
     </div>
     <script type="module" src="script.js"></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
