--- a/public/home.html
+++ b/public/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="/assets/images/icon_poker-removebg-preview.png">
     <link rel="shortcut icon" href="/assets/icon_poker-removebg-preview.png" type="image/x-icon">
     <title>Poker Online</title>
 </head>
