modifica del diagramma casi uso e wireframe

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section id="umlcasiduso">
           <h2>Diagramma di Casi d'uso</h2>
           Solo se l'utente è registrato
-          <p class="lead"><img src="https://i.postimg.cc/59sYXsLb/image.png"></a></p>
+          <p class="lead"><img src="https://i.postimg.cc/HW4wHy3v/image.png"></a></p>
           <pre>
             [Nuovo Utente]
               └──> Registrarsi
@@ -254,10 +254,11 @@
         <section id="wireframes">
           <h2>Wireframes</h2>
           <p class="lead">
-            <p><img src="https://i.postimg.cc/yxDVgyC8/image.png"></p>
-            <p><img src="https://i.postimg.cc/Y9s7HLLK/image.png"></p>
-            <p><img src="https://i.postimg.cc/vDRd1Rv0/image.png"></p>
-            <p><img src="https://i.postimg.cc/3rzyjdSc/image.png"></p>
+            <p><img src="https://i.postimg.cc/vHD59HWG/image.png"></p>
+            <p><img src="https://i.postimg.cc/633pST63/image.png"></p>
+            <p><img src="https://i.postimg.cc/mrhrptgr/image.png"></p>
+            <p><img src="https://i.postimg.cc/PqBd6y76/image.png"></p>
+            <p><img src="https://i.postimg.cc/K88LFc86/image.png"></p>
           </p>
           <hr class="divider">
           <section id="progetto">
