modifica 2 ai wireframe

--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
             <p><img src="https://i.postimg.cc/633pST63/image.png"></p>
             <p><img src="https://i.postimg.cc/mrhrptgr/image.png"></p>
             <p><img src="https://i.postimg.cc/PqBd6y76/image.png"></p>
-            <p><img src="https://i.postimg.cc/K88LFc86/image.png"></p>
+            <p><img src="https://i.postimg.cc/fbb5QKxj/image.png"></p>
+            <p><img src="https://i.postimg.cc/9FtB4SbY/image.png"></p>
           </p>
           <hr class="divider">
           <section id="progetto">
