diagrammi di stato

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <hr>
             <br>
             <p>
-              <img src="https://i.postimg.cc/13t0XKzW/image.png"/>
+              <img src="https://i.postimg.cc/kMHqLJbB/image.png"/>
             </p>
             <hr>
             <br>
