diagrammi di sequenza

--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
         </section>
         <section id="umlsequenza">
           <h2>Diagrammi di Sequenza</h2>
-          <p class="lead"><img src="https://i.postimg.cc/d0t97BD6/image.png"/></p>          
+          <p class="lead"><img src="https://i.ibb.co/gbZW2GbG/Screenshot-2025-04-29-190458.png"/></p>
+          <p class="lead"><img src="https://i.ibb.co/39Nq3VGz/Screenshot-2025-04-29-190514.png"/></p>
+          <p class="lead"><img src="https://i.ibb.co/QvJSQ84d/Screenshot-2025-04-29-190533.png"/></p>  
+          <p class="lead"><img src="https://i.ibb.co/gFXMtckm/Screenshot-2025-04-29-190551.png"/></p>  
+          <p class="lead"><img src="https://i.ibb.co/ycGB5hxL/image.png"/></p>      
         </section>
         <hr class="divider">
         <section id="contenuti">
