modifica ai diagrammi di stato

--- a/index.html
+++ b/index.html
@@ -201,28 +201,28 @@
           <h2>Diagrammi di Stato</h2>
           <p class="lead">
             <p>
-              <img src="https://i.postimg.cc/50vS1Ntb/image.png"/>
+              <img src="https://i.ibb.co/jPZj944g/image.png"/>
             </p>
             <br>
             <hr>
             <br>
             <p>
-              <img src="https://i.postimg.cc/6qfV2jRP/image.png"/>
+              <img src="https://i.ibb.co/0VY4CX1f/image.png"/>
             </p>
             <hr>
             <br>
             <p>
-              <img src="https://i.postimg.cc/kMHqLJbB/image.png"/>
+              <img src="https://i.ibb.co/CK2Y4yQv/image.png"/>
             </p>
             <hr>
             <br>
             <p>
-              <img src="https://i.postimg.cc/tRNFzcZS/image.png"/>
+              <img src="https://i.ibb.co/RpxhRM63/image.png"/>
             </p>
             <hr>
             <br>
             <p>
-              <img src="https://i.postimg.cc/cL23Hy2H/image.png"/>
+              <img src="https://i.ibb.co/p6MXFDgp/image.png"/>
             </p>
           </p>          
         </section>
