--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </section>
         <section id="umloggetti">
           <h2>Diagrammi di oggetti</h2>
-          <p class="lead">Al momento non esistono i diagrammi di oggetti</p>          
+          <img src="assets/images/image.png"/>        
         </section>
         <section id="umlstato">
           <h2>Diagrammi di Stato</h2>
