--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </section>
         <section id="umloggetti">
           <h2>Diagrammi di oggetti</h2>
-          <img src="assets/images/image.png"/>        
+          <img src="https://i.ibb.co/twgdZgS5/image.png"/>        
         </section>
         <section id="umlstato">
           <h2>Diagrammi di Stato</h2>
