--- a/public/home.html
+++ b/public/home.html
@@ -21,9 +21,16 @@
                 <div class="card-icon">♠ ♥ ♣ ♦</div>
                 <h1>Login</h1>
                 <form id="formlogin">
-                    <input id="nome" type="text" placeholder="Username" required>
-                    <input id="password" type="password" placeholder="Password" required>
-                    <button type="button" id="buttonlogin" class="bottoni_principali">Login</button>
+                    
+                </form>
+            </div>
+        </div>
+        <div class="page" id="registrati">
+            <div id="login-container">
+                <div class="card-icon">♠ ♥ ♣ ♦</div>
+                <h1>Registrati</h1>
+                <form id="formregister">
+                    
                 </form>
             </div>
         </div>
