cotrollo dell'entrata in stanza

--- a/public/home.html
+++ b/public/home.html
@@ -53,6 +53,8 @@
                 <input type="text" id="codice_stanza" placeholder="Codice Stanza" class="poker-input">
                 <button id="entra_stanza" class="poker-button"><span class="icon">♦</span>Entra in stanza</button>
             </div>
+
+            <div id="error-message-stanze"></div>
             
         </div>
         <div class="page" id="partita">
