--- a/public/home.html
+++ b/public/home.html
@@ -58,7 +58,7 @@
             
         </div>
         <div class="page" id="partita">
-            <div id="turni"></div>
+            
             <div id="carte_house"></div>
             <div id="carte_mano"></div>
             <div class="action-buttons">
@@ -72,6 +72,7 @@
     </div>
     <script type="module" src="script.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script src="https://kit.fontawesome.com/85c43843e4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
