--- a/public/home.html
+++ b/public/home.html
@@ -58,7 +58,7 @@
             
         </div>
         <div class="page" id="partita">
-            
+            <div id="giocatori_container" class="d-flex justify-content-center flex-wrap mb-3"></div>
             <div id="carte_house"></div>
             <div id="carte_mano"></div>
             <div class="action-buttons">
