modifica codice con recupera password

--- a/public/home.html
+++ b/public/home.html
@@ -34,6 +34,15 @@
                 </form>
             </div>
         </div>
+        <div class="page" id="recupera">
+            <div id="login-container">
+                <div class="card-icon">♠ ♥ ♣ ♦</div>
+                <h1>Recupera password</h1>
+                <form id="formrecupera">
+                    
+                </form>
+            </div>
+        </div>
         <div class="page" id="stanza_attesa">
             <h1 id="nomestanza"></h1>
             <p id="codicestanza"></p>
