--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="/assets/images/icon_poker-removebg-preview.png">
     <link rel="shortcut icon" href="/assets/icon_poker-removebg-preview.png" type="image/x-icon">
-    <title>Poker Online Babapapr</title>
+    <title>Poker Online</title>
 </head>
 <body>
     <div class="poker-table">
