--- a/public/home.html
+++ b/public/home.html
@@ -70,14 +70,7 @@
             <div id="giocatori_container" class="d-flex justify-content-center flex-wrap mb-3"></div>
             <div id="carte_house"></div>
             <div id="carte_mano"></div>
-            <div class="action-buttons">
-                <button class="btn btn-danger action-button" id="fold">Fold</button>
-                <button class="btn btn-secondary action-button" id="check">Check</button>
-                <button class="btn btn-warning action-button" id="call">Call</button>
-                <button class="btn btn-success action-button" id="raise">Raise</button>
-                <input type="number" class="form-control form-control-sm d-inline-block w-auto ms-2" placeholder="2" id="puntata_libera">
-                </div>
-        </div>       
+            <div id="azioni_giocatore" class="action-buttons"></div>       
     </div>
     <script type="module" src="script.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
