--- a/public/home.html
+++ b/public/home.html
@@ -34,6 +34,7 @@
         <div class="page" id="partita">       
     </div>
     <script type="module" src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/poker-evaluator@1.0.0/dist/poker-evaluator.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script src="https://kit.fontawesome.com/85c43843e4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
