--- a/public/home.html
+++ b/public/home.html
@@ -31,8 +31,17 @@
         <div class="page" id="stanze">
             <div id="stanze_container"></div>            
         </div>
-        <div class="page" id="partita">       
-    </div>
+        <div class="page" id="partita">     
+        </div>
+        <div id="fine-partita" class="fine-partita hidden">
+        <div class="contenuto-fine">
+            <h2 class="titolo-fine">🏆 Giocatore 2 ha vinto!</h2>
+            <p class="mano-vincente">Mano vincente: Scala colore (10♠ J♠ Q♠ K♠ A♠)</p>
+            <div class="bottoni-fine">
+            <a id="torna_attesa" class="poker-button">Torna alla stanza d'attesa</a>
+            </div>
+        </div>
+        </div>  
     <script type="module" src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/poker-evaluator@1.0.0/dist/poker-evaluator.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
